--- a/src/base/_variables.sass
+++ b/src/base/_variables.sass
@@ -1,1 +1,13 @@
 $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
+
+$grey: #1e1e1e
+$bright-grey: #b1b1b1
+$black: #000
+
+$font-base: 16px
+$font-xs: $font-base / 4 * 3
+$font-lg: $font-base / 5 * 4
+
+$m-base: 20px
+$m-xs: $m-base / 4
+$m-lg: $m-base / 2 * 3
