--- a/src/content/Content.sass
+++ b/src/content/Content.sass
@@ -1,5 +1,4 @@
 @import '../application' 
-
     
 .content
     margin-top: 30px
@@ -16,21 +15,17 @@
 
 
 .portfolio-item
-    margin: 0 20px
+    padding: 0 20px
     flex: 0 0 100%
     +media-breakpoint-up(sm)
-        flex: 0 0 calc(33% - 40px)
-        margin: 20px 20px
-    
+        flex: 0 0 28%
+        padding: 20px 20px
+       
     &__subtitle
         color: #b1b1b1
 
     &__title
         font-weight: bold
-
-    &__image
-        width: 360px
-        height: 360px
 
     &__content
         margin: 20px 0
