--- a/src/header/Header.sass
+++ b/src/header/Header.sass
@@ -1,17 +1,20 @@
+@import '../application' 
+    
 .header
     display: flex
     justify-content: space-between
+    
     &__list
         display: flex
         list-style: none
-        &-link    
-            color: #1e1e1e
-            padding: 5px
-            font-size: 14px
-        
 
+        &-link    
+            color: $grey
+            font-size: $font-xs
+            padding: $m-xs
+        
     &__link
         align-self: center
-        color: #000
+        color: $black
+        font-size: $font-lg
         font-weight: bold
-        font-size: 20px
