Prepared footer layout

--- a/src/assets/stylesheets/base/_variables.sass
+++ b/src/assets/stylesheets/base/_variables.sass
@@ -9,5 +9,10 @@ $font-xs: $font-base / 4 * 3
 $font-lg: $font-base / 5 * 4
 
 $m-base: 20px
+$m-sm: $m-base / 2
 $m-xs: $m-base / 4
 $m-lg: $m-base / 2 * 3
+
+$red: red
+$icon-class: 'icon--'
+$icon-size: 20px
