Added icons to footer

--- a/src/assets/stylesheets/base/_variables.sass
+++ b/src/assets/stylesheets/base/_variables.sass
@@ -14,5 +14,5 @@ $m-xs: $m-base / 4
 $m-lg: $m-base / 2 * 3
 
 $red: red
-$icon-class: 'icon--'
-$icon-size: 20px
+$icon-class: 'icon-'
+$icon-size: 10px
