--- a/src/assets/stylesheets/shared/_icons.sass
+++ b/src/assets/stylesheets/shared/_icons.sass
@@ -1,17 +1,17 @@
 @font-face 
   font-family: 'icomoon'
-  src: url('/assets/fonts/icomoon.eot?cuwrv2')
-  src: url('/assets/fonts/icomoon.eot?cuwrv2#iefix') format('embedded-opentype')
-  src: url('/assets/fonts/icomoon.ttf?cuwrv2') format('truetype')
-  src: url('/assets/fonts/icomoon.woff?cuwrv2') format('woff')
-  src: url('/assets/fonts/icomoon.svg?cuwrv2#icomoon') format('svg')
+  src: local('icomoon'), url(./fonts/icomoon.woff?cuwrv2) format('woff'),
+  url(./fonts/icomoon.eot?cuwrv2),
+  url(./fonts/icomoon.eot?cuwrv2#iefix) format('embedded-opentype'),
+  url(./fonts/icomoon.ttf?cuwrv2) format('truetype'),
+  url(./fonts/icomoon.svg?cuwrv2#icomoon) format('svg')
+
   font-weight: normal
   font-style: normal
 
 =icon-settings
-  display: block
   font:
-    family: 'icons'
+    family: 'icomoon'
     size: $icon-size
     style: normal
     variant: normal
@@ -27,11 +27,8 @@
   %#{$icon-class}#{$name}
     &:before
       content: #{"\"\\"}#{$content + "\""}
-
+  
 [class*=#{$icon-class}]
-  display: inline-block
-  height: $icon-size
-
   &:active,
   &:hover,
   &:focus
@@ -43,3 +40,8 @@
   + *,
   * + &
     margin-left: $m-sm
+
+
++icon(facebook, 'ea91')
++icon(dribble, 'eaa7')
++icon(twitter, 'ea96')
