Added color and applied for footer links

--- a/src/assets/stylesheets/base/_variables.sass
+++ b/src/assets/stylesheets/base/_variables.sass
@@ -1,6 +1,7 @@
 $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 
-$grey: #1e1e1e
+$dark-grey: #1e1e1e
+$grey: #545454
 $bright-grey: #b1b1b1
 $black: #000
 
