--- a/src/footer/footer.sass
+++ b/src/footer/footer.sass
@@ -10,11 +10,11 @@
         flex-direction: column
         list-style: none
         margin: 0
-        padding: $m-base 0
+        padding: 0 0 $m-base 0
 
         &-link 
             align-items: center
-            color: $grey
+            color: $dark-grey
             display: flex
             font-size: $font-xs
             margin: $m-xs 0   
@@ -38,6 +38,7 @@
         
         &__list        
             flex-direction: row
+            padding: 0 
 
             &-link 
                 margin: 0 $m-xs       
