--- a/src/header/header.sass
+++ b/src/header/header.sass
@@ -9,7 +9,7 @@
         list-style: none
 
         &-link    
-            color: $grey
+            color: $dark-grey
             font-size: $font-xs
             padding: $m-xs
         
