Changed color of description

--- a/src/content/content.sass
+++ b/src/content/content.sass
@@ -5,6 +5,7 @@
     padding-top: $m-lg
 
     &__description
+        color: $grey
         font-size: $font-xs
         font-smooth: antialiased
         line-height: 1.5
