Added menu on mobile

--- a/src/assets/stylesheets/base/_variables.sass
+++ b/src/assets/stylesheets/base/_variables.sass
@@ -6,7 +6,7 @@ $black: #000
 
 $font-base: 16px
 $font-xs: $font-base / 4 * 3
-$font-lg: $font-base / 5 * 4
+$font-lg: $font-base / 4 * 5
 
 $m-base: 20px
 $m-sm: $m-base / 2
@@ -16,3 +16,4 @@ $m-lg: $m-base / 2 * 3
 $danger: red
 $icon-class: 'icon-'
 $icon-size: 10px
+$menu-icon-size: 20px
