--- a/src/_application.sass
+++ b/src/_application.sass
@@ -1,2 +1,3 @@
 @import 'assets/stylesheets/base/variables'
 @import 'assets/stylesheets/base/breakpoints'
+@import 'assets/stylesheets/base/mixins'
