--- a/src/app.sass
+++ b/src/app.sass
@@ -13,3 +13,4 @@ a
 
 body
   margin: $m-lg 10%
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
