--- a/src/header/header.sass
+++ b/src/header/header.sass
@@ -5,10 +5,10 @@
     flex-direction: column    
 
     &__home
-        font-size: $font-lg
         align-self: center    
         color: $black
-        font-weight: bold    
+        font-size: $font-lg
+        font-weight: $font-weight-bold    
 
     &__list
         display: flex
@@ -58,7 +58,4 @@
         +visible
 
         &--hidden
-            +invisible
-
-            
-       
+            +invisible        
