--- a/src/content/portfolioItem.sass
+++ b/src/content/portfolioItem.sass
@@ -8,13 +8,14 @@
         +media-breakpoint-up(sm)
             display: none
 
-    &__subtitle
-        color: $bright-grey
+    &__subtitle, &__title
         font-size: $font-xs
 
+    &__subtitle
+        color: $bright-grey
+
     &__title
-        font-weight: bold
-        font-size: $font-xs
+        font-weight: $font-weight-bold
 
     &__image 
         max-height: 100%
