--- a/src/assets/stylesheets/base/_variables.sass
+++ b/src/assets/stylesheets/base/_variables.sass
@@ -1,21 +1,24 @@
 $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 
+$black: #000
+$blue: #0000ff
+$bright-grey: #b1b1b1
+$danger: #ff0000
 $dark-grey: #1e1e1e
 $grey: #545454
-$bright-grey: #b1b1b1
-$black: #000
 
 $font-base: 16px
 $font-xs: $font-base / 4 * 3
 $font-lg: $font-base / 4 * 5
 
+$font-weight-bold: 700
+
 $m-base: 20px
+$m-lg: $m-base / 2 * 3
 $m-sm: $m-base / 2
 $m-xs: $m-base / 4
-$m-lg: $m-base / 2 * 3
 
-$danger: red
 $icon-class: 'icon-'
 $icon-size: 10px
 $menu-icon-size: 20px
-$font-weight-bold: 700
+
