--- a/src/footer/footer.sass
+++ b/src/footer/footer.sass
@@ -10,7 +10,7 @@
         flex-direction: column
         list-style: none
         margin: 0
-        padding: 0 0 $m-base 0
+        padding: 0 0 $m-base
 
         &-link 
             align-items: center
