Not working fonts, global import and eslint. Working paths flattening

--- a/src/components/content/addImageForm.sass
+++ b/src/components/content/addImageForm.sass
@@ -1,7 +1,5 @@
-@import 'src/assets/stylesheets/base/variables'   
-@import 'src/assets/stylesheets/base/breakpoints' 
-@import 'src/assets/stylesheets/base/mixins'    
-
+@import '../../application' 
+    
 .form
     display: flex
     flex-direction: column
