Added loader for fonts, import one file to every stylesheets

--- a/src/_application.sass
+++ b/src/_application.sass
@@ -1,3 +1,4 @@
 @import 'assets/stylesheets/base/variables'
 @import 'assets/stylesheets/base/breakpoints'
 @import 'assets/stylesheets/base/mixins'
+@import 'assets/stylesheets/shared/icons'
