--- a/src/assets/stylesheets/shared/_icons.sass
+++ b/src/assets/stylesheets/shared/_icons.sass
@@ -1,12 +1,12 @@
-@font-face 
-  font-family: 'icomoon'
-  font-weight: normal
-  font-style: normal
-  src: url(/fonts/icomoon.woff?cuwrv2) format('woff'),
-  url(/fonts/icomoon.eot?cuwrv2),
-  url(/fonts/icomoon.eot?cuwrv2#iefix) format('embedded-opentype'),
-  url(/fonts/icomoon.ttf?cuwrv2) format('truetype'),
-  url(/fonts/icomoon.svg?cuwrv2#icomoon) format('svg')
+// @font-face 
+//   font-family: 'icomoon'
+//   font-weight: normal
+//   font-style: normal
+//   src: url(/fonts/icomoon.woff?cuwrv2) format('woff'),
+//   url(/fonts/icomoon.eot?cuwrv2),
+//   url(/fonts/icomoon.eot?cuwrv2#iefix) format('embedded-opentype'),
+//   url(/fonts/icomoon.ttf?cuwrv2) format('truetype'),
+//   url(/fonts/icomoon.svg?cuwrv2#icomoon) format('svg')
 
 
 =icon-settings
