--- a/src/app.sass
+++ b/src/app.sass
@@ -1,4 +1,15 @@
-*
+@import 'assets/stylesheets/shared/icons'
+
+@font-face 
+  font-family: 'icomoon'
+  src: local('icomoon'), url(./fonts/icomoon.woff?cuwrv2) format('woff'),
+  url(./fonts/icomoon.eot?cuwrv2),
+  url(./fonts/icomoon.eot?cuwrv2#iefix) format('embedded-opentype'),
+  url(./fonts/icomoon.ttf?cuwrv2) format('truetype'),
+  url(./fonts/icomoon.svg?cuwrv2#icomoon) format('svg')
+  font-weight: normal
+  font-style: normal  
+  *
   box-sizing: border-box
 
 a
